# TestPlusPlus

./: .bettercodehub.yml  .clang-format  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md  build.bat  pipeline.yaml  requirements.txt  run.sh  sctf.hpp
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  pull_request_template.md
docs/: annotated.html  api_8hpp.html  api_8hpp__dep__incl.dot  api_8hpp__dep__incl.map  api_8hpp__dep__incl.md5  api_8hpp__incl.dot  api_8hpp__incl.map  api_8hpp__incl.md5  api_8hpp_source.html  assert_8hpp.html  assert_8hpp__dep__incl.dot  assert_8hpp__dep__incl.map  assert_8hpp__dep__incl.md5  assert_8hpp__incl.dot  assert_8hpp__incl.map  assert_8hpp__incl.md5  assert_8hpp_source.html  assertion__failure_8hpp_source.html  classes.html  classsctf_1_1console__reporter-members.html  classsctf_1_1console__reporter.html  classsctf_1_1console__reporter__coll__graph.dot  classsctf_1_1console__reporter__coll__graph.map  classsctf_1_1console__reporter__coll__graph.md5  classsctf_1_1console__reporter__inherit__graph.dot  classsctf_1_1console__reporter__inherit__graph.md5  classsctf_1_1intern_1_1assertion__failure-members.html  classsctf_1_1intern_1_1assertion__failure.html  classsctf_1_1intern_1_1assertion__failure__coll__graph.dot  classsctf_1_1intern_1_1assertion__failure__coll__graph.md5  classsctf_1_1intern_1_1assertion__failure__inherit__graph.dot  classsctf_1_1intern_1_1assertion__failure__inherit__graph.map  classsctf_1_1intern_1_1assertion__failure__inherit__graph.md5  classsctf_1_1intern_1_1console__reporter.html  (+306 more)
(+507 files in other folders)
